--- a/01_Inception/index.html
+++ b/01_Inception/index.html
@@ -18,7 +18,7 @@
         Now Writing same thing using java script
      -->
 
-    <div id="root"></div>
+    <div id="root"> mandar</div>
     <!-- <script>
         const heading = document.createElement("h1");
         heading.innerHTML="Hello I am Mandar Marathe";
@@ -31,9 +31,11 @@
     Now lets do same thing by react via cdn (content delivery network) react
     
  -->
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="./App.js"></script>
+    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
+
+    <!-- <script src="./App.js"></script> -->
+    <script type="module" src="./App.js"></script>
 
     <!-- 
         let get to App.js
