--- a/01_Inception/index.html
+++ b/01_Inception/index.html
@@ -18,7 +18,7 @@
         Now Writing same thing using java script
      -->
 
-    <div id="root"> mandar</div>
+    <div id="root"></div>
     <!-- <script>
         const heading = document.createElement("h1");
         heading.innerHTML="Hello I am Mandar Marathe";
