--- a/01_Inception/index.html
+++ b/01_Inception/index.html
@@ -35,7 +35,7 @@
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
 
     <!-- <script src="./App.js"></script> -->
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./src/App.js"></script>
 
     <!-- 
         let get to App.js
